# Qlimate

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.frontend  PLAN.md  README.md  docker-compose.yml  nginx.conf  pyproject.toml  render.yaml  requirements.txt  run.py
backend/: predict_server.py  requirements.txt
config/: config.yaml
data/processed/: merra2_india_labeled.csv  merra2_india_states.csv  quantum_splits.npz  splits.npz
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: predict.js
notebooks/: 01_data_exploration.ipynb  02_classical_ml.ipynb  03_quantum_ml.ipynb  04_comparison.ipynb
results/: dashboard.html  model_comparison.csv
results/metrics/: data_efficiency.json  efficiency.json  kernel_stats.json  optimization.json  performance.json
results/models/: classical_scaler.pkl  neural_network_state_dict.pt  pca_model.pkl  qsvc.pkl  qsvc_meta.pkl  quantum_scaler.pkl  vqc_meta.pkl  xgboost.pkl
scripts/: download_models.py  export_metrics.py  precompute_quantum.py
src/data/: download.py  label.py  preprocess.py
src/evaluation/: metrics.py
src/features/: engineering.py
src/models/: classical.py  quantum.py
src/visualization/: feature_flow.py  interactive.py  kernel_visualization.py  linkedin_images.py  optimization_plots.py  pipeline_breakdown.py  scaling_plots.py  static_plots.py
tests/: test_classical_models.py  test_feature_engineering.py  test_integration.py  test_metrics.py  test_quantum_models.py
(+21 files in other folders)
