[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "qlimate"
version = "0.1.0"
description = "Classical ML vs Quantum ML on NASA MERRA-2 climate data for India"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
